Why the fuck does this work

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,19 +2,19 @@ extends layout
 
 block content
   div 
-    select
+    select(align="center", onchange="selectEvent(this.value);")
       for val in dbevents
         option=val.event + " " + val.year
-  div
-    table.table.center(align="center")
-      tr
-        th='Game'
-        th='Platform'
-        th='Event'
-        th='Year'
-      each val in dbdata
-        tr
-          td=val.Game
-          td=val.Platform
-          td=val.Event
-          td=val.Year
+  div#tableData
+    //- table.table.center(align="center")
+    //-   tr
+    //-     th='Game'
+    //-     th='Platform'
+    //-     th='Event'
+    //-     th='Year'
+    //-   each val in dbdata
+    //-     tr
+    //-       td=val.Game
+    //-       td=val.Platform
+    //-       td=val.Event
+    //-       td=val.Year
