--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,5 +18,6 @@ html
       div.footer Powered by 
         a(href='https://nodejs.org', target="_blank"): img(src='https://www.vectorlogo.zone/logos/nodejs/nodejs-icon.svg' width='56px' height='56px')
 
-      
-      
+    
+    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js')
+    script(src='javascript/index.js')
