--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,13 +10,12 @@ html
         
     block content
 
-    footer.h3
-      div.footer Project on 
-        a(href='https://github.com/sillypears/gdq-database/', target="_blank"): img(src='https://www.vectorlogo.zone/logos/github/github-icon.svg' width='56px' height='56px')
-      div.footer Powered by 
-        a(href='https://expressjs.com', target="_blank"): img(src='https://www.vectorlogo.zone/logos/expressjs/expressjs-icon.svg' width='56px' height='56px')
-      div.footer Powered by 
-        a(href='https://nodejs.org', target="_blank"): img(src='https://www.vectorlogo.zone/logos/nodejs/nodejs-icon.svg' width='56px' height='56px')
+    footer.text-muted
+      div Project on 
+        a(href='https://github.com/sillypears/gdq-database/', target="_blank"): img(src='https://www.vectorlogo.zone/logos/github/github-icon.svg' width='32px' height='32px')
+      div Powered by 
+        a(href='https://expressjs.com', target="_blank"): img(src='https://www.vectorlogo.zone/logos/expressjs/expressjs-icon.svg' width='32px' height='32px')
+        a(href='https://nodejs.org', target="_blank"): img(src='https://www.vectorlogo.zone/logos/nodejs/nodejs-icon.svg' width='32px' height='32px')
 
     
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js')
