--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,10 @@ div.footer a img {
 
 footer {
   text-align: center;
-
+  /* position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 100px; */
 }
 
 header {
