--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,10 @@
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
+
+
 body {
   padding: 60px;
-  font: 12px "Helvetica Neue", sans-serif;
+  font-family: "Oswald", sans-serif !important;
+  /* font: 12px "Roboto", sans-serif; */
   background: #AAAABB;
   
 }
