--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
-
-
 body {
   padding: 60px;
-  font-family: "Oswald", sans-serif !important;
-  /* font: 12px "Roboto", sans-serif; */
+  font: 12px "Helvetica Neue", sans-serif;
   background: #AAAABB;
   
 }
