--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,9 @@ doctype html
 html
   head
     title=title
-    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T', crossorigin='anonymous')
+    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
+    if nav_name == "edit_runner"
+      link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/css/bootstrap-select.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
 
   body
@@ -34,4 +36,10 @@ html
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js')
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js")
-    script(src='/javascript/index.js')
+    if nav_name == "index"
+      script(src='/javascript/index.js')
+    if nav_name == "add_runner"
+      script(src='/javascript/add_runner.js')
+    if nav_name == "edit_runner"
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/js/bootstrap-select.min.js')
+      script(src="/javascript/edit_runner.js")
