--- a/views/add_runner.pug
+++ b/views/add_runner.pug
@@ -14,4 +14,4 @@ block content
         p
         input.form-control#youtube(type="text", name="youtube", placeholder="Youtube channel")
         p
-        button.form-control.btn.btn-success(type="submit", action="add_runner", method="post") Add Runner
+        button.form-control.btn.btn-success#submit_runner(type="submit") Add Runner
